--- a/src/app/converter/converter.component.html
+++ b/src/app/converter/converter.component.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 
 
-<div class="container">
+<div class="container" *ngIf="rates">
 
     <br/><br/><br/>
 
     <h1>Currency Converter</h1>
     
-    <label>From: {{ from }} </label>
-    <label>To: {{ to }} </label>
+    <label for="fromSelect">From: </label>
+    <select [(ngModel)]="from" id="fromSelect" (change)="loadRates()">
+        <option *ngFor="let c of getAllCurrencies()" [value]="c"> {{c}} </option>
+    </select>
+
+    <label for="toSelect">To: </label>
+    <select [(ngModel)]="to" id="toSelect">
+        <option *ngFor="let c of getAllCurrencies()" [value]="c"> {{c}} </option>
+    </select>
     
     <br/>
     <input type="number" placeholder="amount" [(ngModel)]="amount">
